kustomize/helloworld/public/nginx/ingressroutes.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: simpleingressroute
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.test.com`) && PathPrefix(`/service`)
      kind: Rule
      services:
        - name: nginx-service
          port: 80
          namespace: default
